v3:
- Add argument support
v2:
- Add packaging to a portable dofile
v1:
- Add program