@@ -1,6 +1,6 @@
-!main run
-!require mkdir cp chmod unzip bash python3
-!def run
+!main build
+!require mkdir cp chmod bash python3
+!def build
     set -e
     echo "Building"
     mkdir -p build
@@ -11,12 +11,16 @@
     echo "Installing"
     cp build/do /usr/bin
     ln -svf /usr/bin/do /usr/bin/simbabuild
-    mkdir -p /usr/lib/do
-    cp template.py /usr/lib/do
+    mkdir -p /usr/lib/simbabuild
+    cp template.py /usr/lib/simbabuild
 !def clean
     rm -rf build
     #Clean unzipped lib folder
 !def uninstall:admin
     rm /usr/bin/do
     rm /usr/bin/simbabuild
-    rm -rf /usr/lib/do
+    rm -rf /usr/lib/simbabuild
+!def commit:private
+    git add .
+    git commit -m $1
+    git push
